--- a/Dialogue/OPai.yaml
+++ b/Dialogue/OPai.yaml
@@ -3,5 +3,5 @@ characterLeft: 2
 characterRight: 1
 LeftContent: 欧派前辈~~~​
 RightContent: 怎么回事啊 这个...​
-extraContent: 可选内容​
+extraContent: 欧派可是很重要的
 BackgroundImageName: BG of OPai.yaml
