最终制作完毕

--- a/Dialogue/OPai.yaml
+++ b/Dialogue/OPai.yaml
@@ -1,7 +1,7 @@
-﻿Writer: 北宇治高校GD部​
+Writer: 北宇治高校GD部​
 characterLeft: 2
 characterRight: 1
 LeftContent: 欧派前辈~~~​
-RightContent: 怎么回事啊 这个...​
+RightContent: 怎么回事啊，这个...​
 extraContent: 欧派可是很重要的
 BackgroundImageName: BG of OPai.yaml
